--- a/packages/landingpage/components/getting-started/layout.module.scss
+++ b/packages/landingpage/components/getting-started/layout.module.scss
@@ -4,6 +4,11 @@
   grid-template-columns: minmax(400px, 960px) 1fr;
   padding-bottom: 20px;
 
+  aside {
+    min-width: 200px;
+    margin-left: 100px;
+  }
+
   .content {
     grid-row: 1;
     grid-column: 1 / 2;
