--- a/packages/storybook/src/stories/ino-button/ino-button.scss
+++ b/packages/storybook/src/stories/ino-button/ino-button.scss
@@ -1,4 +1,6 @@
-.story-button .container {
-  display: flex;
-  column-gap: 20px;
+#story--buttons-ino-button--leading-and-trailing-icon-inner {
+  #root-inner {
+    display: flex;
+    column-gap: 20px;
+  }
 }
